changed code analysis recommendations